--- a/index2.html
+++ b/index2.html
@@ -8,14 +8,15 @@
   <div class="boxmodel">
     "Our watches are not just instruments of time, but symbols of taste, power, and presence — made for those who wear confidence like a crown".
   </div>
+
   <header class="header">
     <div class="left-side">
-      <img src="C:\Users\HP\Downloads\New folder\logo1.png.png" width="60" height="60" class="logo" alt="logo">
+      <img src="logo1.png" width="60" height="60" class="logo" alt="logo">
       <h1 class="brand-name">CROWN & DIALS</h1>
     </div>
 
     <nav class="navbar">
-      <a href="index.">Home</a>
+      <a href="index.html">Home</a>
       <a href="#">Accessories</a>
       <a href="#">Collections</a>
       <a href="#">Contact Us</a>
@@ -25,32 +26,34 @@
 
   <div class="container">
     <div class="product-card">
-      <img src="C:\Users\HP\Downloads\New folder\Watch1.png.png" alt="Black Leather Watch">
+      <img src="watch1.png" alt="Classic Brown Leather Watch">
       <p class="description">Classic Brown Leather Watch</p>
       <p class="price">$249</p>
     </div>
 
     <div class="product-card">
-      <img src="C:\Users\HP\Downloads\New folder\Watch2.png.png" alt="Watch 2">
-      <p class="description">Steel Royal blue Dial Watch</p>
+      <img src="watch2.png" alt="Steel Royal Blue Dial Watch">
+      <p class="description">Steel Royal Blue Dial Watch</p>
       <p class="price">$299</p>
     </div>
+
     <div class="product-card">
-      <img src="C:\Users\HP\Downloads\New folder\Watch3.png.png" alt="Watch 3">
-      <p class="description"> Golden-Black Royal Watch</p>
+      <img src="watch3.png" alt="Golden-Black Royal Watch">
+      <p class="description">Golden-Black Royal Watch</p>
       <p class="price">$399</p>
     </div>
 
     <div class="product-card">
-      <img src="C:\Users\HP\Downloads\New folder\Watch4.png.png" alt="Watch 4">
+      <img src="watch4.png" alt="Vintage Golden-Silver Mix">
       <p class="description">Vintage Golden-Silver Mix</p>
       <p class="price">$349</p>
     </div>
+
     <div class="product-card">
-      <img src="C:\Users\HP\Downloads\New folder\watch5.png.png" alt="Watch 5">
-      <p class="description">Classic Pure All-Black watch</p>
+      <img src="watch5.png" alt="Classic Pure All-Black Watch">
+      <p class="description">Classic Pure All-Black Watch</p>
       <p class="price">$349</p>
     </div>
-
+  </div>
 </body>
 </html>
